2003-02-18 21:24  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m:
	Add basic interface that lets the typesetter access soft-invalidated
	layout information.

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Use
	the soft-invalidated information to avoid rebuilding the layout
	(when possible).

	* Source/NSLayoutManager.m: Fix edge case in soft invalidation.

2003-02-18  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m
	[colorTable] corrected the output of the colour table, by using a
	C array instead of an NSMutableArray.
	* TextConverters/RTF/RTFConsumer.m
	GSRTFcolorfg(), GSRTFcolorbg(), GSRTFlineSpace(),
	GSRTFspaceAbove() set the state of the context to changed, so that
	new attributes get used.

2003-02-18 18:03  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m, Source/NSLayoutManager.m: Implement
	handling of soft-invalidated line frags. Soft-invalidate layout
	information for glyphs after an edited range in NSLayoutManager.

2003-02-18 01:23  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m: Many minor cleanups and optimizations.
	Much commenting.

	* Source/GSHorizontalTypesetter.m (-layoutGlyphsInLayoutManager:
	inTextContainer:startingAtGlyphIndex:previousLineFragmentRect:
	nextGlyphIndex:numberOfLineFragments:): Determine the initial value
	for newParagraph correctly.

	* Source/NSLayoutManager.m
	(-textStorage:edited:range:changeInLength:invalidatedRange:): Don't
	invalidate all layout on each change. Now, all layout information
	for glyphs before the change will be reused. (Layout for glyphs
	after the change is still invalidated, until I finish the soft
	invalidation.)

	* Source/GSTextStorage.m (-setAttributes:range:): Call
	-edited:range:changeInLength: with the range that was changed (and